After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 706729 - GnomeRR: g-s-d backlight step up/down don't work anymore
GnomeRR: g-s-d backlight step up/down don't work anymore
Status: RESOLVED FIXED
Product: gnome-desktop
Classification: Core
Component: general
3.9.x
Other Linux
: Normal normal
: ---
Assigned To: Desktop Maintainers
Desktop Maintainers
: 707290 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2013-08-25 04:40 UTC by Sebastian Keller
Modified: 2013-09-02 15:32 UTC
See Also:
GNOME target: 3.10
GNOME version: ---


Attachments
GnomeRR: store new backlight value after successfully setting it (1.10 KB, patch)
2013-08-25 04:41 UTC, Sebastian Keller
reviewed Details | Review
GnomeRR: read the backlight value after asking mutter to change it (1.62 KB, patch)
2013-08-26 15:31 UTC, Giovanni Campagna
committed Details | Review
MonitorManager: return the new backlight after changing (1.58 KB, patch)
2013-08-26 15:31 UTC, Giovanni Campagna
committed Details | Review

Description Sebastian Keller 2013-08-25 04:40:29 UTC
Since 3.9.90 setting the display backlight using keyboard shortcuts doesn't work anymore. I've tracked this down to gnome_rr_output_set_backlight not updating the stored backlight value correctly so gnome_rr_output_get_backlight would always report the old value.
I'm attaching a patch that fixes the issue for me but I'm not sure if this is the best way to fix this.
Comment 1 Sebastian Keller 2013-08-25 04:41:11 UTC
Created attachment 253044 [details] [review]
GnomeRR: store new backlight value after successfully setting it
Comment 2 Matthias Clasen 2013-08-26 03:26:12 UTC
Giovanni, you touched this last - does this seem right ?
Comment 3 Giovanni Campagna 2013-08-26 11:48:39 UTC
Review of attachment 253044 [details] [review]:

This is only partially correct, because it doesn't account for rounding caused by HW limits.
I think we need to return the new value from the DBus call.
Comment 4 Giovanni Campagna 2013-08-26 15:31:14 UTC
Created attachment 253145 [details] [review]
GnomeRR: read the backlight value after asking mutter to change it

Mutter now returns the new backlight value after a successfull call
to ChangeBacklight, so we need to read it.
Comment 5 Giovanni Campagna 2013-08-26 15:31:31 UTC
Created attachment 253146 [details] [review]
MonitorManager: return the new backlight after changing

Modify the interface of ChangeBacklight to return the new value,
to account for rounding to HW limits.
Comment 6 Matthias Clasen 2013-08-26 15:33:13 UTC
Review of attachment 253145 [details] [review]:

looks fine to me
Comment 7 Matthias Clasen 2013-08-26 15:33:39 UTC
Review of attachment 253146 [details] [review]:

sure
Comment 8 Giovanni Campagna 2013-08-26 15:36:05 UTC
Comment on attachment 253146 [details] [review]
MonitorManager: return the new backlight after changing

Attachment 253146 [details] pushed as a3037a6 - MonitorManager: return the new backlight after changing
Comment 9 Giovanni Campagna 2013-08-26 15:36:57 UTC
Attachment 253145 [details] pushed as b150371 - GnomeRR: read the backlight value after asking mutter to change it
Comment 10 Giovanni Campagna 2013-09-02 15:32:37 UTC
*** Bug 707290 has been marked as a duplicate of this bug. ***